--- a/src/preprocess.ipynb
+++ b/src/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "from easydict import EasyDict as edict\n",
     "\n",
     "args = edict()\n",
-    "args.batch_size = 32\n",
+    "args.batch_size = 2\n",
     "args.nlayers = 2\n",
     "\n",
     "args.embedding_size = 4\n",
@@ -79,6 +79,7 @@
     "args.slide_deck_N = 5\n",
     "args.slide_deck_embedding_size = 512\n",
     "args.padding_idx = 0\n",
+    "args.max_seq_length = 8\n",
     "\n",
     "device = 'cuda:0' if torch.cuda.is_available() and args.gpu else 'cpu'\n",
     "# Create directory name.\n",
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 535,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 536,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 539,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 540,
    "metadata": {},
    "outputs": [
     {
@@ -459,27 +460,27 @@
      "output_type": "stream",
      "text": [
       "tensor([1., 3., 3., 3., 0., 0., 0.])\n",
-      "tensor([[0.4083, 0.5307, 0.2234, 0.3105, 5.0000],\n",
-      "        [0.7093, 0.5333, 0.1792, 0.2974, 5.0000],\n",
-      "        [0.0964, 0.5307, 0.2253, 0.3034, 5.0000],\n",
-      "        [0.0575, 0.4617, 0.8662, 0.0595, 3.0000],\n",
-      "        [0.0665, 0.0746, 0.8635, 0.2828, 1.0000],\n",
+      "tensor([[0.2473, 0.1190, 0.5074, 0.1069, 1.0000],\n",
+      "        [0.0578, 0.4118, 0.4015, 0.0685, 3.0000],\n",
+      "        [0.0586, 0.5060, 0.4004, 0.2107, 3.0000],\n",
+      "        [0.0575, 0.3216, 0.2919, 0.0670, 3.0000],\n",
+      "        [0.5274, 0.3241, 0.4178, 0.4476, 7.0000],\n",
+      "        [0.0575, 0.5025, 0.4026, 0.2923, 3.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]])\n",
+      "tensor([[ 0.0881,  0.1270,  0.8268,  0.0927,  1.0000],\n",
+      "        [ 0.0597,  0.3165,  0.4216,  0.4592,  3.0000],\n",
+      "        [ 0.5108,  0.3170,  0.4242,  0.5791, 11.0000],\n",
+      "        [ 0.0571,  0.3110,  0.4265,  0.5927,  3.0000],\n",
+      "        [ 0.0824,  0.8432,  0.2129,  0.0509,  3.0000],\n",
+      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
+      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000]])\n",
+      "tensor([[0.2261, 0.1210, 0.5509, 0.1033, 1.0000],\n",
+      "        [0.0514, 0.9138, 0.8594, 0.0418, 3.0000],\n",
+      "        [0.0586, 0.6568, 0.8321, 0.2001, 9.0000],\n",
+      "        [0.0597, 0.4229, 0.1728, 0.0600, 3.0000],\n",
+      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]])\n",
-      "tensor([[ 0.4722,  0.3579,  0.5191,  0.5060, 11.0000],\n",
-      "        [ 0.1924,  0.1215,  0.6178,  0.0927,  1.0000],\n",
-      "        [ 0.0518,  0.3296,  0.3452,  0.2243,  3.0000],\n",
-      "        [ 0.0507,  0.5680,  0.3951,  0.1588,  3.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000]])\n",
-      "tensor([[ 0.2790,  0.3281,  0.3890,  0.3160, 11.0000],\n",
-      "        [ 0.3743,  0.1230,  0.2526,  0.1018,  1.0000],\n",
-      "        [ 0.0000,  0.6694,  0.9992,  0.3004,  5.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000],\n",
-      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000]])\n",
       "tensor([[0.2291, 0.3926, 0.5312, 0.3473, 5.0000],\n",
       "        [0.1509, 0.0585, 0.6960, 0.2263, 1.0000],\n",
       "        [0.2669, 0.7959, 0.4590, 0.0580, 3.0000],\n",
@@ -487,14 +488,14 @@
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]])\n",
-      "tensor([[0.1414, 0.2334, 0.6949, 0.5186, 7.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "tensor([[0.0836, 0.3241, 0.7977, 0.3261, 3.0000],\n",
+      "        [0.2242, 0.1174, 0.5539, 0.1089, 1.0000],\n",
+      "        [0.0858, 0.7364, 0.6900, 0.0776, 3.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
       "        [0.0000, 0.0000, 0.0000, 0.0000, 0.0000]])\n",
-      "tensor([5, 4, 3, 3, 1], dtype=torch.int32)\n"
+      "tensor([6, 5, 4, 3, 3], dtype=torch.int32)\n"
      ]
     }
    ],
@@ -510,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,11 +557,16 @@
     "        types = torch.squeeze(self.embed(types))\n",
     "        input = torch.cat((input, types), dim=-1)\n",
     "\n",
+    "        output = self.dropout(input)\n",
+    "        \n",
+    "\n",
+    "        output = torch.nn.utils.rnn.pack_padded_sequence(output, lengths)\n",
+    "\n",
     "        h_0 = torch.stack([h for (h, _) in states], dim=0)\n",
     "        c_0 = torch.stack([c for (_, c) in states], dim=0)\n",
     "        \n",
-    "        output = self.dropout(input)\n",
     "        (output, context_vector) = self.lstm(output, (h_0, c_0))\n",
+    "        output, lengths = torch.nn.utils.rnn.pad_packed_sequence(output, total_length = args.max_seq_length)\n",
     "        return (output, context_vector)\n",
     "\n",
     "class SlideDeckEncoder(nn.Module):\n",
@@ -591,6 +597,9 @@
     "                states = self._get_init_states(x)\n",
     "            length = lengths[i]\n",
     "            output, states = self.slide_encoder(x, states, length)\n",
+    "            output = output[length.long() - 1,:,:]\n",
+    "            idxs = torch.arange(args.batch_size)\n",
+    "            output = output[idxs, idxs, :]\n",
     "            embedding.append(output[-1:].squeeze())\n",
     "        \n",
     "        output = torch.cat(embedding, dim=-1)\n",
@@ -600,9 +609,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 549,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n",
+      "torch.Size([512])\n"
+     ]
+    }
+   ],
    "source": [
     "model = SlideDeckEncoder().to(device)\n",
     "\n",
@@ -611,8 +647,44 @@
     "        xs = torch.transpose(batch[\"slide_deck\"], 0, 1)\n",
     "        xs = torch.transpose(xs, 1, 2)\n",
     "        lengths = torch.transpose(batch[\"lengths_slide_deck\"], 0, 1)\n",
-    "        slide_deck_embedding = model(xs, lengths)\n"
+    "        slide_deck_embedding = model(xs, lengths)\n",
+    "        print(slide_deck_embedding.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
