Implementation completed, but Discriminator does not train

--- a/src/SeqToSeq.ipynb
+++ b/src/SeqToSeq.ipynb
@@ -888,9 +888,7 @@
    "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "c = Discriminator()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -988,6 +986,8 @@
     }
    ],
    "source": [
+    "c = Discriminator()\n",
+    "\n",
     "z = torch.randn((args.batch_size, args.latent_vector_dim))\n",
     "s = list(train_loader)[0]\n",
     "# print(len(s))\n",
