New Dataset, small fix in SeqToSeq_fes

--- a/src/SeqToSeq_fes.ipynb
+++ b/src/SeqToSeq_fes.ipynb
@@ -45,7 +45,7 @@
     "from easydict import EasyDict as edict\n",
     "\n",
     "args = edict()\n",
-    "args.batch_size = 4\n",
+    "args.batch_size = 64\n",
     "args.nlayers = 2\n",
     "\n",
     "args.embedding_size = 4\n",
@@ -71,9 +71,9 @@
     "args.n_cpu = 4\n",
     "args.latent_dim = 100\n",
     "args.channels = 1\n",
-    "args.clip_value = 0.01\n",
+    "args.clip_value = 0.1\n",
     "args.sample_interval = 400\n",
-    "args.n_critic = 100\n",
+    "args.n_critic = 5\n",
     "args.b1 = 0.5\n",
     "args.b2 = 0.999\n",
     "\n",
@@ -418,7 +418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = os.path.join(os.path.dirname(os.getcwd()), \"data\", \"slide_deck_dataset_all.csv\")\n",
+    "csv_file = os.path.join(os.path.dirname(os.getcwd()), \"data\", \"slide_deck_dataset_icml20.csv\")\n",
     "\n",
     "dataset = pd.read_csv(csv_file)\n",
     "slide_deck_data = process_slide_deck_dataset(dataset)\n",
@@ -1001,8 +1001,8 @@
     "            batches_done += 1\n",
     "           \n",
     "        print(\n",
-    "            \"[Epoch %d/%d] [D loss: %f] [G loss: %f]\"\n",
-    "            % (epoch, args.n_epochs, total_loss_D/D_num, total_loss_G/G_num)\n",
+    "            \"[Epoch %d/%d] [D loss: %f | Steps: %d] [G loss: %f Steps: %d]\"\n",
+    "            % (epoch, args.n_epochs, total_loss_D/D_num, D_num, total_loss_G/G_num, G_num)\n",
     "        )"
    ]
   },
@@ -1014,13 +1014,6 @@
    "source": [
     "run_epoch(models, optimizers, True, train_loader)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
