New Bigger Dataset

--- a/src/preprocess.ipynb
+++ b/src/preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,25 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'slide_deck_N'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/w3/zf9g_hvj5k77gd35xml1b9m40000gn/T/ipykernel_63681/2480443414.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mdivision\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_portion\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mslide_deck_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m train_slide_deck_dataset = BBSlideDeckDataset(\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mslide_deck_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mslice_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mslide_deck_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdivision\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     transform=transforms.Compose([\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'slide_deck_N'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "csv_file = os.path.join(os.path.dirname(os.getcwd()), \"data\", \"slide_deck_dataset_icml20.csv\")\n",
+    "csv_files_root = os.path.join(os.path.dirname(os.getcwd()), \"data\", \"bbs\")\n",
     "\n",
-    "dataset = pd.read_csv(csv_file)\n",
+    "dataset = None\n",
+    "\n",
+    "for _, dirs, files in os.walk(csv_files_root):\n",
+    "    for file in files:\n",
+    "        if file.endswith('.csv'):\n",
+    "            print('file: ', file)\n",
+    "            csv_file_path = os.path.join(csv_files_root, file)\n",
+    "            cur_dataset = pd.read_csv(csv_file_path)\n",
+    "            if dataset is None:\n",
+    "                dataset = cur_dataset\n",
+    "            else:\n",
+    "                dataset = pd.concat([dataset, cur_dataset])\n",
     "slide_deck_data = process_slide_deck_dataset(dataset)\n",
     "\n",
     "division = int(args.train_portion * len(slide_deck_data))\n",
