--- a/src_transformer/test.ipynb
+++ b/src_transformer/test.ipynb
@@ -19,9 +19,9 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "from preprocess_root import init_dataset\n",
-    "#from model import SlideDeckEncoder, Generator, Discriminator\n",
+    "from model import SlideDeckEncoder, Generator, Discriminator\n",
     "#from model_no_encoder import Generator, Discriminator\n",
-    "from model_combined import SlideDeckEncoder, CombinedGenerator, CombinedDiscriminator\n",
+    "#from model_combined import SlideDeckEncoder, CombinedGenerator, CombinedDiscriminator\n",
     "\n",
     "from utils_transformer import SortByRefSlide, draw_bbs, get_Tensor, get_device, get_args, draw_all_bbs\n",
     "\n",
@@ -79,45 +79,45 @@
    "source": [
     "# NO GAN\n",
     "\n",
-    "# encoder = SlideDeckEncoder(\n",
-    "#     args.num_label, args.slide_deck_embedding_size, args.slide_deck_N, args.padding_idx, \n",
-    "#     args.D_d_model, args.D_nhead, args.D_num_layers\n",
-    "# ).to(device)\n",
-    "\n",
-    "# generator = Generator(\n",
-    "#     args.latent_size, args.num_label, args.slide_deck_embedding_size, args.padding_idx,\n",
-    "#     d_model=args.G_d_model,\n",
-    "#     nhead=args.G_nhead,\n",
-    "#     num_layers=args.G_num_layers,\n",
-    "# ).to(device)\n",
-    "\n",
-    "# discriminator = Discriminator(\n",
-    "#     args.num_label, args.slide_deck_embedding_size, args.max_seq_length, args.padding_idx,\n",
-    "#     d_model=args.D_d_model,\n",
-    "#     nhead=args.D_nhead,\n",
-    "#     num_layers=args.D_num_layers,\n",
-    "# ).to(device)\n",
-    "\n",
-    "\n",
-    "# COMBINED\n",
     "encoder = SlideDeckEncoder(\n",
-    "    args.num_label, args.slide_deck_embedding_size, args.small_dim_slide, args.slide_deck_N, args.padding_idx, \n",
+    "    args.num_label, args.slide_deck_embedding_size, args.slide_deck_N, args.padding_idx, \n",
     "    args.D_d_model, args.D_nhead, args.D_num_layers\n",
     ").to(device)\n",
     "\n",
-    "generator = CombinedGenerator(\n",
-    "    args.latent_size, args.num_label, args.small_dim_slide, args.padding_idx,\n",
+    "generator = Generator(\n",
+    "    args.latent_size, args.num_label, args.slide_deck_embedding_size, args.padding_idx,\n",
     "    d_model=args.G_d_model,\n",
     "    nhead=args.G_nhead,\n",
     "    num_layers=args.G_num_layers,\n",
     ").to(device)\n",
     "\n",
-    "discriminator = CombinedDiscriminator(\n",
-    "    args.num_label, args.slide_deck_embedding_size, args.small_dim_slide, args.max_seq_length, args.padding_idx,\n",
+    "discriminator = Discriminator(\n",
+    "    args.num_label, args.slide_deck_embedding_size, args.max_seq_length, args.padding_idx,\n",
     "    d_model=args.D_d_model,\n",
     "    nhead=args.D_nhead,\n",
     "    num_layers=args.D_num_layers,\n",
     ").to(device)\n",
+    "\n",
+    "\n",
+    "# COMBINED\n",
+    "# encoder = SlideDeckEncoder(\n",
+    "#     args.num_label, args.slide_deck_embedding_size, args.small_dim_slide, args.slide_deck_N, args.padding_idx, \n",
+    "#     args.D_d_model, args.D_nhead, args.D_num_layers\n",
+    "# ).to(device)\n",
+    "\n",
+    "# generator = CombinedGenerator(\n",
+    "#     args.latent_size, args.num_label, args.small_dim_slide, args.padding_idx,\n",
+    "#     d_model=args.G_d_model,\n",
+    "#     nhead=args.G_nhead,\n",
+    "#     num_layers=args.G_num_layers,\n",
+    "# ).to(device)\n",
+    "\n",
+    "# discriminator = CombinedDiscriminator(\n",
+    "#     args.num_label, args.slide_deck_embedding_size, args.small_dim_slide, args.max_seq_length, args.padding_idx,\n",
+    "#     d_model=args.D_d_model,\n",
+    "#     nhead=args.D_nhead,\n",
+    "#     num_layers=args.D_num_layers,\n",
+    "# ).to(device)\n",
     "\n",
     "\n",
     "\n",
@@ -133,7 +133,7 @@
     "}\n",
     "\n",
     "\n",
-    "parent_dir = result_dir / 'trial_transf_4'\n",
+    "parent_dir = result_dir / 'trial_transf_5'\n",
     "\n",
     "\n",
     "(models, optimizers, loaded_epoch) = load_chekpoint(parent_dir, models, optimizers)\n",
@@ -178,68 +178,68 @@
     "total_loss_D_real = 0\n",
     "total_loss_D_fake = 0\n",
     "\n",
-    "for batch in test_loader:\n",
-    "    batch = SortByRefSlide(batch)\n",
-    "    shape = batch[\"shape\"].to(device)\n",
-    "    slide_deck = batch[\"slide_deck\"].to(device)\n",
-    "    lengths_slide_deck = batch[\"lengths_slide_deck\"].to(device)\n",
-    "    ref_length = batch[\"length_ref_types\"].to(device)\n",
-    "    ref_types = batch[\"ref_types\"].to(device).long()\n",
-    "    ref_slide = batch[\"ref_slide\"].to(device)\n",
+    "for run in range(10):\n",
+    "    for batch in test_loader:\n",
+    "        batch = SortByRefSlide(batch)\n",
+    "        shape = batch[\"shape\"].to(device)\n",
+    "        slide_deck = batch[\"slide_deck\"].to(device)\n",
+    "        lengths_slide_deck = batch[\"lengths_slide_deck\"].to(device)\n",
+    "        ref_length = batch[\"length_ref_types\"].to(device)\n",
+    "        ref_types = batch[\"ref_types\"].to(device).long()\n",
+    "        ref_slide = batch[\"ref_slide\"].to(device)\n",
     "\n",
-    "    # deck encdoing\n",
-    "    slide_deck = torch.transpose(slide_deck, 0, 1)\n",
-    "    lengths_slide_deck = torch.transpose(lengths_slide_deck, 0, 1)\n",
-    "    bboxes = slide_deck[:, :, :, :-1]\n",
-    "    labels = slide_deck[:, :, :, -1].long()\n",
-    "    padding_masks = ~(lengths_slide_deck[:, :, None] > torch.arange(labels.size(2)).to(device)[None, :])\n",
+    "        # deck encdoing\n",
+    "        slide_deck = torch.transpose(slide_deck, 0, 1)\n",
+    "        lengths_slide_deck = torch.transpose(lengths_slide_deck, 0, 1)\n",
+    "        bboxes = slide_deck[:, :, :, :-1]\n",
+    "        labels = slide_deck[:, :, :, -1].long()\n",
+    "        padding_masks = ~(lengths_slide_deck[:, :, None] > torch.arange(labels.size(2)).to(device)[None, :])\n",
     "\n",
-    "    deck_enc = models['encoder'](bboxes, labels, padding_masks)\n",
+    "        deck_enc = models['encoder'](bboxes, labels, padding_masks)\n",
     "\n",
-    "    #deck_enc = torch.rand(deck_enc.size()).to(device)\n",
-    "    deck_enc = torch.zeros(deck_enc.size()).to(device)\n",
-    "    label = ref_types\n",
+    "        #deck_enc = torch.rand(deck_enc.size()).to(device)\n",
+    "        #deck_enc = torch.zeros(deck_enc.size()).to(device)\n",
+    "        label = ref_types\n",
     "\n",
-    "    padding_mask = ~(ref_length[:, None] > torch.arange(label.size(1)).to(device)[None, :])\n",
-    "    bbox_real = ref_slide[:, :, :-1]\n",
+    "        padding_mask = ~(ref_length[:, None] > torch.arange(label.size(1)).to(device)[None, :])\n",
+    "        bbox_real = ref_slide[:, :, :-1]\n",
     "\n",
-    "    z = torch.autograd.Variable(Tensor(np.random.normal(0, 1, (label.size(0), label.size(1), args.latent_size))))\n",
-    "    bbox_fake = models['generator'](z, label, deck_enc, padding_mask).detach()\n",
+    "        z = torch.autograd.Variable(Tensor(np.random.normal(0, 1, (label.size(0), label.size(1), args.latent_size))))\n",
+    "        bbox_fake = models['generator'](z, label, deck_enc, padding_mask).detach()\n",
     "\n",
-    "    n += 1\n",
-    "    with torch.no_grad():\n",
-    "        total_loss_D_real += torch.mean(models['discriminator'](bbox_real, label, deck_enc, padding_mask))\n",
-    "        total_loss_D_fake += torch.mean(models['discriminator'](bbox_fake, label, deck_enc, padding_mask))\n",
+    "        n += 1\n",
+    "        with torch.no_grad():\n",
+    "            total_loss_D_real += torch.mean(models['discriminator'](bbox_real, label, deck_enc, padding_mask))\n",
+    "            total_loss_D_fake += torch.mean(models['discriminator'](bbox_fake, label, deck_enc, padding_mask))\n",
     "\n",
-    "    iou = torch.mean(compute_iou(bbox_real, bbox_fake))\n",
+    "        iou = torch.mean(torch.nan_to_num(compute_iou(bbox_real, bbox_fake)))\n",
     "\n",
-    "    overlap_fake = torch.mean(compute_overlap(bbox_fake, padding_mask))\n",
-    "    overlap_real = torch.mean(compute_overlap(bbox_real, padding_mask))\n",
+    "        overlap_fake = torch.mean(torch.nan_to_num(compute_overlap(bbox_fake, ~padding_mask)))\n",
+    "        overlap_real = torch.mean(torch.nan_to_num(compute_overlap(bbox_real, ~padding_mask)))\n",
     "\n",
-    "    alignment_real = torch.mean(compute_alignment(bbox_real, padding_mask))\n",
-    "    alignment_fake = torch.mean(compute_alignment(bbox_fake, padding_mask))\n",
+    "        alignment_real = torch.mean(torch.nan_to_num(compute_alignment(bbox_real, ~padding_mask)))\n",
+    "        alignment_fake = torch.mean(torch.nan_to_num(compute_alignment(bbox_fake, ~padding_mask)))\n",
     "\n",
-    "    accuracy = torch.mean(F.mse_loss(bbox_fake, bbox_real))\n",
+    "        accuracy = torch.mean(F.mse_loss(bbox_fake, bbox_real))\n",
     "\n",
-    "    if torch.isnan(iou) == False:\n",
-    "        total_iou += iou\n",
-    "    \n",
-    "    if torch.isnan(overlap_real) == False:\n",
-    "        total_overlap_real += overlap_real\n",
+    "        if torch.isnan(iou) == False:\n",
+    "            total_iou += iou\n",
+    "        \n",
+    "        if torch.isnan(overlap_real) == False:\n",
+    "            total_overlap_real += overlap_real\n",
     "\n",
-    "    if torch.isnan(overlap_fake) == False:\n",
-    "        total_overlap_fake += overlap_fake\n",
+    "        if torch.isnan(overlap_fake) == False:\n",
+    "            total_overlap_fake += overlap_fake\n",
     "\n",
-    "    if torch.isnan(alignment_real) == False:\n",
-    "        total_alignment_real += alignment_real\n",
+    "        if torch.isnan(alignment_real) == False:\n",
+    "            total_alignment_real += alignment_real\n",
     "\n",
-    "    if torch.isnan(alignment_fake) == False:\n",
-    "        total_alignment_fake += alignment_fake\n",
+    "        if torch.isnan(alignment_fake) == False:\n",
+    "            total_alignment_fake += alignment_fake\n",
     "\n",
-    "    if torch.isnan(accuracy) == False:\n",
-    "        total_accuracy += accuracy\n",
-    "    #print(n, accuracy, iou, overlap_fake, overlap_real, alignment_fake, alignment_real)\n",
-    "\n",
+    "        if torch.isnan(accuracy) == False:\n",
+    "            total_accuracy += accuracy\n",
+    "print(total_overlap_real / n, total_overlap_fake / n)\n",
     "print(n, total_accuracy / n, total_iou / n, total_overlap_fake / n, total_loss_D_real / n, total_loss_D_fake / n)"
    ]
   },
