--- a/src_lstm/test.ipynb
+++ b/src_lstm/test.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = '/home/fesiib/doc2slide/dev/intro_to_dl_project'\n",
-    "LOAD_CHECKPOINT = 'checkpoint_329.pt'\n",
-    "PARENT_FOLDER = 'trial_7'\n",
+    "root = './'\n",
+    "LOAD_CHECKPOINT = 'lstm-chkpt.pt'\n",
+    "PARENT_FOLDER = 'lstm'\n",
     "\n",
     "import os\n",
     "from pathlib import Path\n",
