--- a/src_lstm/test.ipynb
+++ b/src_lstm/test.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = './'\n",
+    "root = './' # should be a full path, e.g. /PATH_FROM_ROOT/cs492i-layout-generation\n",
     "LOAD_CHECKPOINT = 'lstm-chkpt.pt'\n",
     "PARENT_FOLDER = 'lstm'\n",
     "\n",
