--- a/src_transformer/test.ipynb
+++ b/src_transformer/test.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = '/home/fesiib/doc2slide/dev/intro_to_dl_project'\n",
-    "LOAD_CHECKPOINT = 'checkpoint_249.pt'\n",
-    "PARENT_FOLDER = 'trial_transf_5'\n",
+    "root = './' # should be a full path, e.g. /PATH_FROM_ROOT/cs492i-layout-generation\n",
+    "LOAD_CHECKPOINT = 'transf-mse-chkpt.pt'\n",
+    "PARENT_FOLDER = 'transf-mse'\n",
     "\n",
     "import os\n",
     "from pathlib import Path\n",
@@ -79,8 +79,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NO GAN\n",
+    "### Uncomment appropriate model\n",
     "\n",
+    "# MSE\n",
     "encoder = SlideDeckEncoder(\n",
     "    args.num_label, args.slide_deck_embedding_size, args.slide_deck_N, args.padding_idx, \n",
     "    args.D_d_model, args.D_nhead, args.D_num_layers\n",
